Adding list delegations endpoint
